--- a/dash.html
+++ b/dash.html
@@ -218,11 +218,11 @@
                     <h1>Solved Problems</h1>
                     
                     <div class="textback">
-                     <p>Easy -</p>
+                     <p>Easy - 25%</p>
                     <br>
-                    <p>Medium -</p>
+                    <p>Medium - 30%</p>
                     <br>
-                    <p>Hard -</p>
+                    <p>Hard - 10%</p>
                     <br>
                     </div>
                    
