--- a/dash.html
+++ b/dash.html
@@ -256,49 +256,49 @@
                 <p>Best Time to buy and sell stock</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>The Number of Weak Characters in the Game</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Pacific Atlantic Waterflow</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Arranging Coins</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Clone Graph</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Number of Dice Rolls with Target Sum</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Course Schedule II</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Number of Dice Rolls with Target Sum</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Max Area of Island</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Binary Tree Cameras</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Remove The bad characters from a Array</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Next Permutation</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Book Allocation Problem</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Pivot Point in a Rotated Array</p>
             </div>
             <div class="prob1">
-                <p>Best Time to buy and sell stock</p>
+                <p>Searching element in Rotated Array</p>
             </div>
             <div class="prob2">
-                <p>Best Time to buy and sell stock</p>
+                <p>Find square root of a number without using pow function</p>
             </div>
             <div class="prob1">
                 <p>Best Time to buy and sell stock</p>
