Some minor changes

--- a/dash.html
+++ b/dash.html
@@ -16,7 +16,7 @@
         </div>
         <nav>
             <ul>
-                <li><a class="active" href="" >Explore</a></li>
+                <li><a class="active" href="" >Dashboard</a></li>
                 <li><a href="">Problem</a></li>
                 <li><a href="home.html">Contest</a></li>
                 <li><a href="">Discuss</a></li>
