--- a/dash.html
+++ b/dash.html
@@ -321,7 +321,7 @@
                 <p>No Solution </p>
             </div>
             <div class="contain">
-                <img src="./Images/Null.png" alt="">
+                <img src="./Images/Null.png" alt=""width="50%">
                 <p>No Discussion</p>
             </div>
             
